# jellED

./: .clang-tidy  .gitignore  LICENSE  README.md  setupRaspi.sh
design/: README.md
design/kicad/jellED/: jellED-cache.lib  jellED-rescue.kicad_sym  jellED.bak  jellED.kicad_prl  jellED.kicad_pro  jellED.kicad_sch  jellED.sch  sym-lib-table
design/kicad/lib/: 74hct125.lib  INMP441.lib
documentation/: INMP441.md  SPIFFS.md  SoundDataMetadata.txt  UART.md  WS2812.md
jellED/: CMakeLists.txt  README.md  platformio.ini
jellED/core/: CMakeLists.txt  ICrono.h  ILogger.h  IPlatformUtils.h  uartProtocol.h
jellED/core/beatDetection/: CMakeLists.txt  beatdetection.h  library.json
jellED/core/beatDetection/include/: adaptiveNormalizer.h  automaticGainControl.h  bandpassFilter.h  beatDetectionConfig.h  downsampler.h  envelopeDetector.h  filterStage.h  multibandFusion.h  noiseGate.h  peakdetection.h  ringbuffer.h  sampleRecorder.h  tempoTracker.h
jellED/core/beatDetection/src/: adaptiveNormalizer.cpp  automaticGainControl.cpp  bandpassFilter.cpp  beatdetection.cpp  downsampler.cpp  envelopeDetector.cpp  multibandFusion.cpp  noiseGate.cpp  peakdetection.cpp  ringbuffer.cpp  sampleRecorder.cpp  tempoTracker.cpp
jellED/core/beatDetection/test/: CMakeLists.txt  bandpass_test.cpp  beatdetection_test.cpp  envelope_test.cpp  peakdetection_test.cpp  ringbuffer_test.cpp
jellED/core/beatDetection/test/utils/: TestPlatformUtils.cpp  TestPlatformUtils.h
jellED/core/bluetooth/: BluetoothInterface.cpp  BluetoothInterface.h
jellED/core/patternEngine/: CMakeLists.txt  library.json  patternEngine.h
jellED/core/patternEngine/config/: configParser.h  jsonlib.h  patternConfig.h  patternEngineConfig.h
jellED/core/patternEngine/config/src/: configParser.cpp  jsonlib.cpp  patternEngineConfig.cpp
jellED/core/patternEngine/pattern/: alternatingColors.h  audioFeatures.h  breathingGlowPattern.h  coloredAmplitude.h  pattern.h  patternBlueprint.h  patternType.h  pattern_colors.h  pulseFlashPattern.h  rainbowPattern.h  sparklePattern.h
jellED/core/patternEngine/pattern/src/: alternatingColors.cpp  breathingGlowPattern.cpp  coloredAmplitude.cpp  pattern.cpp  patternBlueprint.cpp  pulseFlashPattern.cpp  rainbowPattern.cpp  sparklePattern.cpp
jellED/core/patternEngine/src/: patternEngine.cpp
jellED/core/serial/: CMakeLists.txt  ISerial.h  README.md  uart.h
jellED/core/serial/examples/: UartExample.cpp
jellED/core/serial/src/: Uart.cpp
jellED/core/serial/test/: UartTest.cpp
jellED/core/sound/: audiobuffer.h  soundconfig.h  soundinput.h
jellED/core/test/: CMakeLists.txt
jellED/core/test/beatDetection/: bandpass_test.cpp  beatdetection_test.cpp  envelope_test.cpp  peakdetection_test.cpp  ringbuffer_test.cpp
jellED/core/test/patternEngine/: patternEngine_test.cpp  rainbowpattern_test.cpp
jellED/core/test/utils/: TestPlatformUtils.cpp  TestPlatformUtils.h
jellED/esp/: deploy_esp.sh  platformio.ini
jellED/esp/includes/led/: WS2812.h
jellED/esp/includes/serial/: EspUart.h
jellED/esp/includes/sound/: INMP441.h  musicPiece.h  speaker.h
jellED/esp/includes/utils/: espcrono.h  esplogger.h  esputils.h
jellED/esp/src/: jellED.cpp
jellED/esp/src/led/: WS2812.cpp
jellED/esp/src/serial/: EspUart.cpp
jellED/esp/src/sound/: INMP441.cpp  Speaker.cpp  musicPiece.cpp
jellED/esp/src/utils/: espcrono.cpp  esplogger.cpp  esputils.cpp
jellED/gui/: CMakeLists.txt
jellED/gui/include/: AudioDisplay.h  BeatDetectionProcessor.h  BipolarLedWidget.h  ConfiguratorWindow.h  EnvelopePeakWidget.h  MultibandFusion.h  VolumeDisplayWidget.h  WaveformPoint.h  WaveformWidget.h
jellED/gui/src/: AudioDisplay.cpp  BeatDetectionProcessor.cpp  BipolarLedWidget.cpp  ConfiguratorWindow.cpp  EnvelopePeakWidget.cpp  MultibandFusion.cpp  VolumeDisplayWidget.cpp  WaveformWidget.cpp  main.cpp
jellED/lib/beatDetection/: beatdetection.h  library.json
jellED/lib/beatDetection/include/: bandpassFilter.h  filterStage.h  peakdetection.h  ringbuffer.h
jellED/lib/beatDetection/src/: bandpassFilter.cpp  beatdetection.cpp  fft.c  peakdetection.cpp  ringbuffer.cpp
jellED/lib/bluetooth/: BluetoothInterface.cpp  BluetoothInterface.h
jellED/lib/led/: WS2812.cpp  WS2812.h  alternatingColors.cpp  alternatingColors.h  coloredAmplitude.cpp  configParser.cpp  configParser.h  jsonlib.cpp  pattern.cpp  pattern.h  patternBlueprint.cpp  patternBlueprint.h  patternConfig.h  patternEngine.cpp  patternEngine.h  patternEngineConfig.cpp  patternEngineConfig.h  patternParser.h
jellED/lib/led/config/: configParser.cpp  jsonlib.h
jellED/lib/led/pattern/: alternatingColors.cpp  alternatingColors.h  coloredAmplitude.cpp  coloredAmplitude.h  colored_amplitude.ptn  patternBlueprint.cpp  patternBlueprint.h  patternConfig.h  patternType.h  pattern_colors.h  renderingType.h
jellED/lib/microphone/: INMP441.cpp  INMP441.h
jellED/lib/patternEngine/: library.json  patternEngine.h
jellED/lib/sound/: INMP441.cpp  INMP441.h  audiobuffer.h  beatdetection.cpp  beatdetection.h  fft.h  musicPiece.cpp  musicPiece.h  peakdetection.cpp  peakdetection.h  soundconfig.h  soundinput.h  speaker.h
jellED/raspi/: CMakeLists.txt
jellED/raspi/include/serial/: RaspiUart.h
jellED/raspi/include/sound/: usbMicro.h  wavFile.h
jellED/raspi/include/utils/: raspicrono.h  raspilogger.h  raspiutils.h
jellED/raspi/src/: CMakeLists.txt  jellED.cpp
jellED/raspi/src/serial/: RaspiUart.cpp
jellED/raspi/src/sound/: usbMicro.cpp  wavFile.cpp
jellED/raspi/src/utils/: raspicrono.cpp  raspilogger.cpp  raspiutils.cpp
jellED/src/: jellED.cpp
jellED/test/test_pattern/: test_alternatingColors.hpp  test_coloredAmplitude.hpp  test_patternEngine.cpp  test_patternEngine.hpp  test_patternEngineConfig.hpp  test_pattern_main.cpp
jellED/test/test_serial/: copy_esp_sources.py  platformio.ini  run_uart_test.sh
resources/: SoundStaticsics.py  WavToBuffer.py
soundalyzer/: README.md  bandpass.py  envelope.py  filter.py  iir.py  mainwindow.py  peakdetection.py  plot.py  serial_reader.py  serialreader.py  soundalyzer.py  wav.py
(+8 files in other folders)
